# experiments

./: .syntastic_cpp_config  .travis.yml  CMakeLists.txt  README.md  build.sh
approximation/: .gitignore  CMakeLists.txt  main.cpp
approximation/data/: curves0
approximation/data/simplification/refined/: curves0  curves1  curves2  curves3
approximation/data/simplification/simplifiedPolyline/: curve0  curve1  curve2  curve3
approximation/dataAnalysis/simplification/: simplificationRates.ipynb
approximation/experiments/DoEs/: 0_0015.txt  0_005.txt  0_01.txt  0_025.txt  None.txt  TRIAL1.EIA  curvesRefined.txt  curvesSimplified.txt  scaleVertexList.py  smooth_0015.txt  smooth_005.txt  smooth_01.txt  smooth_025.txt  temp.txt  test.txt
approximation/experiments/DoEs/DoE/: DOE1.EIA  Tol0015F100P0.txt  printF50.txt
approximation/experiments/DoEs/DoE 1/: 1010.EIA  1011.EIA  1012.EIA  1013.EIA  1014.EIA  1015.EIA  1016.EIA  1017.EIA  1018.EIA  DOE1.EIA  print_F100.txt
approximation/experiments/DoEs/DoE 2/: 1005.EIA  1010.EIA  1011.EIA  1012.EIA  1013.EIA  1014.EIA  1015.EIA  1016.EIA  1017.EIA  1018.EIA  1019.EIA  1020.EIA  1021.EIA  DOE2.EIA  print100-150.txt  print50.txt  print5x.txt
approximation/experiments/DoEs/DoE 3/: 1005.EIA  1010.EIA  1011.EIA  1012.EIA  1013.EIA  1014.EIA  1015.EIA  1016.EIA  1017.EIA  1018.EIA  DOE.EIA  DOE3.EIA  parse_data.m  print.txt
approximation/experiments/DoEs/DoE 4/: 1005.EIA  1010.EIA  1011.EIA  1012.EIA  1013.EIA  1014.EIA  1015.EIA  1016.EIA  1017.EIA  1018.EIA  1019.EIA  1020.EIA  1021.EIA  1022.EIA  1023.EIA  1024.EIA  data.xls  parse_passes.m  print.txt
approximation/experiments/DoEs/DoE 5/: 1005.EIA  1010.EIA  1011.EIA  1012.EIA  1013.EIA  1014.EIA  1015.EIA  1016.EIA  1017.EIA  1018.EIA  1019.EIA  1020.EIA  1021.EIA  1022.EIA  DOE.EIA  DOE5.EIA  data.xls  parse_data.m  print.txt
approximation/experiments/DoEs/DoE 6/: 1005.EIA  1010.EIA  1011.EIA  1012.EIA  1013.EIA  1014.EIA  1015.EIA  1016.EIA  1017.EIA  1018.EIA  data.xls  parse_passes.m  print.txt
approximation/experiments/DoEs/DoE 7/: 1005.EIA  1010.EIA  1011.EIA  1012.EIA  1013.EIA  DOE.EIA
approximation/experiments/DoEs/DoE 8/: 1005.EIA  1010.EIA  1011.EIA  circle.txt  circle_sampling.m
approximation/experiments/Inclined Plane Machining/: INCPLANETEST.EIA
approximation/experiments/simplificationLines/: experiment
approximation/experiments/simplificationLines/0.01/: simplified0.txt
approximation/experiments/simplificationLines/DoE/: 1010.EIA  1011.EIA  1012.EIA  1013.EIA  1014.EIA  1015.EIA  1016.EIA  1017.EIA  1018.EIA  DOE1.EIA  DOE1_template.EIA
approximation/experiments/smoothingSimplification/: DOE1.EIA
approximation/polylineVisualization/: .syntastic_cpp_config  CMakeLists.txt  execute.sh  main.cpp  polylineSimplifier.h  resources.cfg
approximation/polylineVisualization/assets/layouts/: Averaging.layout
approximation/polylineVisualization/materials/: materials.material
approximation/polylineVisualization/scripts/: execute.sh  simplificationExperimentRunner.py
approximation/scripts/: simplificationStats.sh
averaging/: .syntastic_cpp_config  CMakeLists.txt  README.md  averagingLinesView.cpp  averagingLinesView.h  averagingPolyloopsView.cpp  averagingPolyloopsView.h  averagingPolyloops_2View.cpp  averagingPolyloops_2View.h  averagingPolyloops_3View.cpp  averagingPolyloops_3View.h  averagingVectorsView.cpp  averagingVectorsView.h  commonViewInteractionsHandler.cpp  commonViewInteractionsHandler.h  commonViewInterface.h  distanceFieldComputers.h  fieldLevelSetVisualizer.h  fieldSampler.h  fieldVisualizers.h  gradientComputer.h  heightFieldVisualizer.h  hessianComputer.h  levelSetMeshBuilder.h  main.cpp  planarStreamLineGenerator.h  resources.cfg  separableGeometryInducedField.cpp  separableGeometryInducedField.h  squaredDistanceField.cpp  squaredDistanceField.h  viewManager.cpp  viewManager.h
averaging/assets/ceedProjects/: averaging.project
averaging/assets/layouts/: Averaging.layout
averaging/assets/materials/: materials.material
averaging/assets/shaders/: averageEdgesFrag.glsl  directedEdgesFrag.glsl  directedEdgesGeom.glsl
averaging/data/: curves1  curves2
averaging/materials/: materials.material
averaging/tests/: .syntastic_cpp_config  CMakeLists.txt  distanceFieldTest.cpp  main.cpp  separableGeometryInducedFieldTest.cpp
cppplayground/: CMakeLists.txt  attribSetContainer.h  main.cpp  temporaries.h  valueTypes.h  variadicTemplates.h
framework/geometry/: CMakeLists.txt  cuboidGeometryProvider.cpp  polylineBuilder.cpp  polyline_3Builder.cpp  polyloop2Builder.cpp  polyloopBuilder.cpp  polyloop_2Builder.cpp  polyloop_3Builder.cpp  uniformVoxelGrid.cpp
framework/geometry/simplification/: .syntastic_cpp_config  polyline_3DouglasPeucker.cpp  polyline_3NaiveCircle.cpp
framework/tests/: CMakeLists.txt  main.cpp
framework/tests/geometry/: .syntastic_cpp_config  circleSamplerTest.cpp  cuboidTest.cpp  polylineTest.cpp  polyline_3Test.cpp  polyloop2DTest.cpp  polyloopTest.cpp  polyloop_2Test.cpp  triangleMeshTest.cpp  uniformPlanarGridTest.cpp  uniformVoxelGridTest.cpp
framework/tests/rendering/: .syntastic_cpp_config  positionOnlyBufferProviderTest.cpp  sequentialGeometryProviderTest.cpp
framework/tests/utils/: .syntastic_cpp_config  attributeIteratorTest.cpp  blockIteratorTest.cpp  stencilCirculatorIteratorTest.cpp  tupleIteratorTest.cpp  variantWrapperTest.cpp
learning/cppplayground/: CMakeLists.txt  README.md  attribSetContainer.h  variadicTemplates.h
smoothing/: .syntastic_cpp_config  CGALKernelSelector.h  CMakeLists.txt  application.h  cameraController.h  commonTypes.h  constants.h  inputManager.h  main.cpp  notifier.h  polyloop.h  polyloopRenderable.h  resources.cfg  sequentialGeometryRenderable.h  uniformVoxelGrid.cpp  uniformVoxelGrid.h  uniformVoxelGridGeometryProvider.h  uniformVoxelGridRenderable.h  window.cpp  window.h  windowedRenderingApp.cpp  windowedRenderingApp.h
smoothing/geometryPrimitives/: alignedCuboid.h
smoothing/materials/: materials.material
smoothing/tests/: CMakeLists.txt  polyloopTest.cpp
(+164 files in other folders)
